--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,11 @@
             <version>5.11.4</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>com.moandjiezana.toml</groupId>
+            <artifactId>toml4j</artifactId>
+            <version>0.7.2</version>
+        </dependency>
     </dependencies>
 
     <build>
